--- a/src/index.css
+++ b/src/index.css
@@ -73,10 +73,11 @@ body {
   background-color: var(--grey) !important;
   color: var(--color-title) !important;
   font-family: "Consolas" !important;
-  margin: 0 auto;overflow-y: hidden;
+  margin: 0 auto;
   overflow-x: hidden;
+  overflow-y: scroll;
 }
-
+  
 :root {
 	--glitch-width: 100vw;
 	--glitch-height: 100vh;
@@ -123,14 +124,14 @@ body {
 }
 
 .text-desc {
-	padding-top: 7.3em !important;  
+	padding-top: 6.3em !important;  
   	font-size: 30px;
 	z-index: 5 !important;	position: relative;
 	text-shadow: 3px 3px 5px var(--grey);
 }
 
 .text-answer {
-	margin-top: 1em !important;
+	margin-top: 0.2em !important;
 	font-size: 20px;padding: 5px;
 	background-color: var(--blurred-answer);
 	z-index: 9;
@@ -141,8 +142,8 @@ body {
 .terminal {
 	background-color: var(--terminal);	
 	padding-bottom: 30px;
-	margin-bottom: 15px;
-	margin-top: 35px;
+	margin-bottom: 15px;z-index: 10;	
+	margin-top: 30px;
 	box-shadow: 2px 2px 2px rgba(78, 9, 9, 0.192);
 }
 
@@ -159,9 +160,9 @@ span {
 }
 
 img {
-	margin-top: -14.1em !important;  
-	z-index: 2;	
-	height: 1000px;
+	margin-top: -12em !important;  
+	z-index: 0;	
+	height: 820px;
 	filter: drop-shadow(.10rem .10rem 2rem rgba(19, 68, 160, 0.274));position: relative;
 	animation: glow 1s infinite alternate;
 }
@@ -211,10 +212,10 @@ img {
 	box-sizing: border-box;
 	border-radius: 5px 5px;
 	border: none !important;
-	margin-left: -29.3em !important;
+	margin-left: -25.8em !important;
 	transition: 0.1s !important;
 	position: absolute; 
-	width: 528px;
+	width: 465px;
 	background-color: var(--red) !important;
 	padding: 10px !important;
 	color: var(--color-title) !important;
@@ -233,7 +234,7 @@ img {
 
 
 h1 {
-	font-size: 130px !important;
+	font-size: 110px !important;
 }
 
 .btn-primary  {
@@ -241,11 +242,11 @@ h1 {
 	line-height: 80px;
 	font-size: 22px;
 	text-align: center;
-	width: 85px;
+	width: 90px;
 	color: var(--grey)!important;
 	cursor: pointer;
 	margin: 0 8px;
-	height: 80px;
+	height: 50px;
 	border-color: #f2f2f2 !important;
 	border-style: solid;
 	text-shadow: 0 0.5px 1px #777, 0 2px 6px #f2f2f2;
@@ -253,12 +254,12 @@ h1 {
 	border-radius: 100%;
 	background: -webkit-linear-gradient(top, #e0e4e0 0%, #e9e2e2 80%, rgb(189, 180, 180) 100%);
 	font-family: sans-serif;
-	display: inline-block;
+	display: inline-block;font-size: 17px !important;
 	transition: box-shadow 0.3s ease, transform 0.15s ease;
 	box-shadow: 0 0 1px #888,0 1px 0 #fff, 0 6px 0 #C0C0C0, 0 8px 17px rgba(#444, 0.4), 2px 1px 4px rgba(#444, 0.25), -2px 1px 4px rgba(#444, 0.25), 0 9px 16px rgba(#444, 0.1);
 	width: 65px;
 	display: block;
-	margin: 35vh auto;
+	margin: 20vh auto;
 }
 
 .binary {
@@ -283,7 +284,7 @@ h1 {
 .title {
 	font-family: "Hacker";	
 	position: absolute; 
-	margin-top: 90px !important;
+	margin-top: 80px !important;
 	background: var(--color-title);
 	-webkit-background-clip: text;
 	background-clip: text;
@@ -629,3 +630,57 @@ h1 {
 		transform: translate3d(0, 0, 0);
 	}
 }
+
+
+@media screen and (max-width: 1300px) {
+	body {
+	  overflow-x: scroll;
+	}
+
+	img {
+		height: 800px;
+		margin-left: -8em !important;
+	}
+
+	.terminal{
+		width: 410px;
+		margin: 20px;	margin-left: 1em !important;
+	}
+
+	.btn-info {
+		width: 410px;
+		margin-left: -15.4em !important;
+		margin-bottom: 20px;
+	}
+
+	h1 {
+		font-size: 80px !important;
+	}
+
+  }
+
+  @media screen and (max-width: 992px) {
+	body {
+	  overflow-x: scroll;
+	}
+
+	img {
+		display: none;
+	}
+
+	.terminal{
+		width: 410px;
+		margin: 20px;
+	}
+
+	.btn-info {
+		width: 410px;
+		margin-left: -12em !important;
+		margin-bottom: 20px;
+	}
+
+	h1 {
+		font-size: 80px !important;
+	}
+
+  }
